# picosvgx

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
src/picosvgx/: __init__.py  _version.py  arc_to_cubic.py  picosvgx.py  svg.py  svg_meta.py  svg_path_iter.py  svg_pathops.py  svg_reuse.py  svg_transform.py  svg_types.py
tests/: arc_to_cubic_test.py  geometric_types_test.py  svg_path_iter_test.py  svg_pathops_test.py  svg_reuse_test.py  svg_test.py  svg_test_helpers.py  svg_transform_test.py  svg_types_test.py
